--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -1,1 +1,15 @@
-some text
+body{
+    background-color:rgb(43, 43, 207);
+}
+*{
+    font-family:math;
+}
+.description{
+    position: relative;
+}
+.main-desc{
+    display: flex;
+}
+ul{
+    font-size: 20px;
+}
